public/styles/category-form.css
main {
  display: flex;
  justify-content: center;
  margin-top: 2rem;
  padding: 1rem;
}

form {
  box-shadow: 0px 0px 10px black;
  padding: 1rem 2rem;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: end;
  gap: 20px;
}

form h2 {
  font-size: 3rem;
  margin-bottom: auto;
  word-break: break-all;
}

form > div {
  display: flex;
  align-items: center;
  gap: 5px;
  flex-wrap: wrap;
}

form > div > label {
  font-size: 2rem;
}

form > div > input {
  align-self: center;
  border: 2px inset black;
  border-radius: 5px;
  padding: 2px 5px;
  font-size: 1rem;
}

form button {
  align-self: center;
  background-color: #845ec2;
  padding: 0.5rem 1rem;
  font-size: 1.2rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: filter 200ms ease;
  &:hover {
    filter: brightness(1.2);
  }
}

form ul {
  list-style: initial;
  align-self: center;
}

@media (max-width: 700px) {
  form h2 {
    font-size: 2rem;
  }
  form > div > label {
    font-size: 1.5rem;
  }
}

